导入hutool工具，实现StrUtils工具类 2022-03-16-11:10

--- a/java_springboot/pom.xml
+++ b/java_springboot/pom.xml
@@ -39,10 +39,15 @@
 		</dependency>
 
 		<dependency>
-		<groupId>com.baomidou</groupId>
-		<artifactId>mybatis-plus-boot-starter</artifactId>
-		<version>3.5.1</version>
-	</dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.7.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
